# vot

./: .gitignore  README.md  Visual Object Tracking Report - Arnaud Baradat.docx  image_embedder.py  main.py  pyproject.toml  requirements.txt  tracking.py  utils.py  yolo_detection.py
benchmarks/: CLEAR.csv  HOTA.csv  ID.csv  VACE.csv  benchmarks_exploration.ipynb  dets.csv  raw.txt
benchmarks/bench_full/: processing_times.txt
benchmarks/bench_full/outputs/: ADL-Rundle-6.txt  ADL-Rundle-8.txt  ETH-Bahnhof.txt  ETH-Pedcross2.txt  ETH-Sunnyday.txt  KITTI-13.txt  KITTI-17.txt  PETS09-S2L1.txt  TUD-Campus.txt  TUD-Stadtmitte.txt  Venice-2.txt
benchmarks/bench_kalman/: processing_times.txt
benchmarks/bench_kalman/outputs/: ADL-Rundle-6.txt  ADL-Rundle-8.txt  ETH-Bahnhof.txt  ETH-Pedcross2.txt  ETH-Sunnyday.txt  KITTI-13.txt  KITTI-17.txt  PETS09-S2L1.txt  TUD-Campus.txt  TUD-Stadtmitte.txt  Venice-2.txt
benchmarks/bench_kalman_hungarian/: processing_times.txt
benchmarks/bench_kalman_hungarian/outputs/: ADL-Rundle-6.txt  ADL-Rundle-8.txt  ETH-Bahnhof.txt  ETH-Pedcross2.txt  ETH-Sunnyday.txt  KITTI-13.txt  KITTI-17.txt  PETS09-S2L1.txt  TUD-Campus.txt  TUD-Stadtmitte.txt  Venice-2.txt
benchmarks/bench_naive/: processing_times.txt
benchmarks/bench_naive/outputs/: ADL-Rundle-6.txt  ETH-Bahnhof.txt  ETH-Pedcross2.txt  ETH-Sunnyday.txt  KITTI-17.txt  Venice-2.txt
data/outputs/: ADL-Rundle-8.txt  KITTI-13.txt  PETS09-S2L1.txt  TUD-Campus.txt  TUD-Stadtmitte.txt
tp1/: objTracking.py
tp1/data/: Detector.py
tp2/: KalmanFilter.py  main.py
(+11 files in other folders)
