[tool.poetry]
name = "visual-object-tracking"
version = "0.1.0"
description = ""
authors = ["Arnaud Baradat <arnaud.baradat@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
numpy = "^1.26.2"
pandas = "^2.1.4"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
ipykernel = "^6.27.1"
scikit-learn = "^1.3.2"
opencv-python = "^4.8.1.78"
tqdm = "^4.66.1"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
memory-profiler = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
